--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <div class="menu">
       <main>
         <h1>Feargus's Christmas Wishlist</h1>
-        <p class="established">Winter 2024</p>
+        <p class="established">Winter 2025</p>
         <hr>
         <section>
           <h2>Larger Items</h2>
           <img src="istockphoto-1049350178-612x612.jpg" alt="santa"/>
           <article class="item">
-            <p class="flavor">Dumbell Weights</p><p class="price">25kg ideally</p>
+            <p class="flavor">Smart Winter Jacket</p><p class="price">Black Trenchcoat Woolen</p>
           </article>
           <article class="item">
-            <p class="flavor">Firm Mattress</p><p class="price">can discuss</p>
+            <p class="flavor"></p><p class="price">can discuss</p>
           </article>
           <article class="item">
             <p class="flavor">Rug</p><p class="price">can discuss</p>
@@ -35,7 +35,7 @@
             <p class="dessert">Unsweetened Dried Mango (large pack)</p><p class="price"><a target="_blank" href="https://www.amazon.co.uk/FOREST-Exotic-Natural-Pieces-Option/dp/B084GQ8XJ5/ref=sr_1_5?dib=eyJ2IjoiMSJ9.iC14zj3CHt7x0Cp_CaVrw8H-xplLBfnzqf1Do3V_FezAHjPCQXPJ4tk-kF-9sb6j84ZPVdz5bGtBkB3M9QKKZ1l3a2qpaDtLgG65GG-0QuCy-GfWY-yElK4IXdxchq-duqW9TkCwbTWQVGhxc0bV1c_TlgrD9w1cEscRnyDyf1BOtGj3ZNHoNnNqCVq53bEecumsPjG09zlA1BboNpEcxKsV-s9PzD1RIJnnsD5DU3HEkwk_EaXYkUp7crKJBdG7Nnm9Ac3FvRtOrBYY8DzKQekH6vnrg_EndfTbIrmgTN8.owlQXF1Phd6rCritytL07n1WaWsMpFnDe79edskkiFQ&dib_tag=se&keywords=forest+feast+dried+mango&nsdOptOutParam=true&qid=1732989834&sr=8-5">Tasty!</a></p>
           </article>
           <article class="item">
-            <p class="dessert">Warm durable slippers</p><p class="price"><a target="_blank" href="https://www.amazon.co.uk/Dunlop-Slippers-Memory-Outdoor-Comfort/dp/B07YVCTK4S/ref=sr_1_9?crid=10Z5O2GBHCXIL&dib=eyJ2IjoiMSJ9.c8wj-IeqOx-r3lvi-KufAnKzXOR9wQ5pKlbkQMttw8SIqbqQyUsKvIO_vURXF_P3fbyWdB-6_fM9SPXmhhgfOXyqc-WCdj_l0r5fAHgvxjAnF6zhmZ-WAq_Q0hR_roQxzgZnxaZwJtJGEJNx_IZB9QlzyUmEJF3MxfcxAGlCa6PITZDUzu1tu33Lg1IH6bmQyz1sslqUeH4WMCLYbNNHFSdTsqOn4NFtifjxtskIvyldssNyRUid1VyUw4vR3lnQZnYnWHDFeOqnmujgCXNxD61s5IRJdsck_KicXYB6qSw.rKx2UJhoEo-NIldZQfO5E6yaZDM9gelFx9eydd0bFkw&dib_tag=se&keywords=home+slippers&qid=1732990264&sprefix=home+slippers%2Caps%2C142&sr=8-9">"Cloud like comfort"</a></p>
+            <p class="dessert">Massaage Ball</p><p class="price"><a target="_blank" href="https://www.amazon.co.uk/Dunlop-Slippers-Memory-Outdoor-Comfort/dp/B07YVCTK4S/ref=sr_1_9?crid=10Z5O2GBHCXIL&dib=eyJ2IjoiMSJ9.c8wj-IeqOx-r3lvi-KufAnKzXOR9wQ5pKlbkQMttw8SIqbqQyUsKvIO_vURXF_P3fbyWdB-6_fM9SPXmhhgfOXyqc-WCdj_l0r5fAHgvxjAnF6zhmZ-WAq_Q0hR_roQxzgZnxaZwJtJGEJNx_IZB9QlzyUmEJF3MxfcxAGlCa6PITZDUzu1tu33Lg1IH6bmQyz1sslqUeH4WMCLYbNNHFSdTsqOn4NFtifjxtskIvyldssNyRUid1VyUw4vR3lnQZnYnWHDFeOqnmujgCXNxD61s5IRJdsck_KicXYB6qSw.rKx2UJhoEo-NIldZQfO5E6yaZDM9gelFx9eydd0bFkw&dib_tag=se&keywords=home+slippers&qid=1732990264&sprefix=home+slippers%2Caps%2C142&sr=8-9">"Cloud like comfort"</a></p>
           </article>
         </section>
       </main>
