Update item description and link text in index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p class="flavor">Rug</p><p class="price">not priority</p>
           </article>
           <article class="item">
-            <p class="flavor">Looks very comfy</p><p class="price"><a target="_blank" href="https://uk.buddhastoneshop.com/products/buddha-stones-solid-color-drawstring-cotton-mens-pants-with-pockets?variant=50072565252415"</a></p>
+            <p class="flavor">Trousers</p><p class="price"><a target="_blank" href="https://uk.buddhastoneshop.com/products/buddha-stones-solid-color-drawstring-cotton-mens-pants-with-pockets?variant=50072565252415">Looks Comfy!</a></p>
           </article>
         </section>
         <section>
